# ReferenceLambertW

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  Timer.h  bench.cpp
cmake/: ReferenceLambertWConfig.cmake.in  macros.cmake
examples/: CMakeLists.txt  Timer.h  example.cpp  ratapprox.cpp
include/: ReferenceLambertW.h  ReferenceW.h  ReferenceW2.h  config.h
src/: CMakeLists.txt  Interval.h  ReferenceLambertW.cpp  ReferenceLambertW.h  ReferenceW.cpp  ReferenceW.h  ReferenceW2.cpp  ReferenceWf.cpp  ReferenceWf.h  Sign.h  halley.h  main.cpp  rndutil.cpp  rndutil.h
tests/: CMakeLists.txt  ReciprocalDistribution.h  ReciprocalDistributionEx.h  tests.cpp
